# hnix-store

./: .gitignore  cabal.project  default.nix  hacky-multi-repl.bash  release.nix
dep/nix/: github.json
dep/reflex-platform/: github.json
hnix-store-core/: hnix-store-core.cabal
hnix-store-core/src/System/Nix/: Base.hs  Base32.hs  ContentAddress.hs  DerivedPath.hs  Hash.hs  Nar.hs  ReadonlyStore.hs  Signature.hs  StorePath.hs  StorePathMetadata.hs  Truncation.hs  ValidPathInfo.hs
hnix-store-core/src/System/Nix/Internal/: Base32.hs  ContentAddressed.hs  ContentAdressed.hs  Hash.hs  StorePath.hs
hnix-store-core/src/System/Nix/Internal/Nar/: Streamer.hs
hnix-store-core/src/System/Nix/Nar/: Effects.hs  Parser.hs  Streamer.hs
hnix-store-core/tests/: Arbitrary.hs  Hash.hs  NarFormat.hs
hnix-store-remote/: ChangeLog.md  hnix-store-remote.cabal
hnix-store-remote/src/System/Nix/Store/: Remote.hs
hnix-store-remote/src/System/Nix/Store/Remote/: Binary.hs  Builders.hs  Client.hs  GADT.hs  Logger.hs  MonadStore.hs  Parsers.hs  Protocol.hs  Server.hs  Socket.hs  TextConv.hs  Types.hs
hnix-store-remote/tests/: NixDaemon.hs  TextConv.hs
